--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
         <div style="margin-left:25%"></div>
 
         <div class="w3-container w3-white"></div>
-      <h1 style=color:chartreuse>SNAKE VAPE </h1>
+      <h1 style=color:chartreuse>SNAKE VAPE two </h1>
     
 
     <img src="assets/img.png" style="width:100%">
